TilingPatternHitterOperator to use the same map shared among the SCN and scn operator. ResourcesHitter Font and ExtGState hit operator avoid processing the TYPE3 font and SoftMaks streams (respectively) if the hit map contains an InUseDictionary with the same id. We set it to the resources and we are done because the processing has been done already.